# saasy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.ona/: automations.yaml
docs/: future_features.md
docs/superpowers/plans/: 2026-04-30-saasy-implementation.md
docs/superpowers/specs/: 2026-04-30-saasy-design.md
saasy/: cli.py  enumeration.py  models.py  session.py
saasy/ai/: base.py  claude.py  context.py
saasy/auth/: base.py  basic.py
saasy/connectors/: base.py  generic.py  ona.py
tests/: test_ai_context.py  test_auth.py  test_connectors.py  test_enumeration.py  test_models.py  test_session.py
