[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saasy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
saasy = "saasy.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
    "pytest-httpx>=0.30.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
    "pytest-httpx>=0.30.0",
]
